# AuthClaw

./: .dockerignore  .env.example  .env.production.local.example  .gitignore  .trivyignore  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  approval_store.py  check_trace.py  chunker.py  conftest.py  docker-compose.production.yml  docker-compose.yml  graph.py  main.py  memory.py  policies.yaml  policy.py  pytest.ini  rag_loader.py  redaction.py  requirements.txt  resume.py  retriever.py  risk.py  run_test_server.py  state.py  task.md  test_audit_chain.py  test_auth_backend.py  test_chat_persistence.py  test_e2e_metrics_and_chain.py  test_gateway.py  test_gateway_benchmark.py  test_gateway_chat.py  test_gateway_lifecycle.py  test_graph.py  test_hitl_workflow.py  (+21 more)
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
Home_Page/: company.html  index.html  pricing.html  product.html  security.html  styles.css
apps/: README.md
data/: gdpr.txt  hipaa.txt  soc2.txt
database/: __init__.py  migrations.py
docs/: AUTHCLAW_WALKTHROUGH.md  REPOSITORY_STRUCTURE.md  api_contract_registry.md  compliance_evidence.md  deployment_guide.md  export_verification.md  feature_matrix.md  final_completion_report.md  final_runtime_architecture.md  final_srs_gap_analysis.md  gateway_phase1.md  implementation_matrix.md  kms_vault_operations.md  nextjs_migration_assessment.md  oidc_setup.md  phase0_contract_baseline.md  phase0_runtime_stabilization.md  phase10_multiregion_dr.md  phase11_sdk_developer_experience.md  phase12_ci_quality.md  (+24 more)
sdk/python/: README.md  authclaw_client.py  pyproject.toml
(+1547 files in other folders)
